@@ -150,15 +150,7 @@
 	    </para>
 	  </listitem>
 	</varlistentry>
-	<varlistentry>
-	  <term>Default Applications</term>
-	  <listitem>
-	    <para>
-	      Selects the default applications to be used for editing
-	      text files and more.
-	    </para>
-	  </listitem>
-	</varlistentry>
+
 	<varlistentry>
 	  <term><xref linkend="config-keyboard" /></term>
 	  <listitem>
@@ -214,6 +206,15 @@
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
+	  <term><xref linkend="cfg-default-applications" /></term>
+	  <listitem>
+	    <para>
+	      Selects the default applications to be used for editing
+	      text files and more.
+	    </para>
+	  </listitem>
+	</varlistentry>
+	<varlistentry>
 	  <term><xref linkend="config-cd" /></term>
 	  <listitem>
 	    <para>
@@ -232,7 +233,7 @@
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term>Gtk+ Theme selector</term>
+	  <term>Gtk+ Theme Selector</term>
 	  <listitem>
 	    <para>
 	      Configures the look of your buttons, menus, text, and
@@ -241,69 +242,10 @@
 	  </listitem>
 	</varlistentry>
 	<varlistentry>
-	  <term>Legacy Applications</term>
-	  <listitem>
-	    <para>
-	      Configures how to treat legacy applications such as Netscape.
-	    </para>
-	  </listitem>
-	</varlistentry>
-	<varlistentry>
-	  <term>Mime Types</term>
-	  <listitem>
-	    <para>
-	      Configures what programs to use for your file types.
-	      This is for your GNOME 1.0 based applications.
-	    </para>
-	  </listitem>
-	</varlistentry>
-	<varlistentry>
-	  <term>Panel</term>
-	  <listitem>
-	    <para>
-	      Sets up properties of your GNOME panel.
-	    </para>
-	  </listitem>
-	</varlistentry>
-	<varlistentry>
-	  <term>Pilot Conduits</term>
-	  <listitem>
-	    <para>
-	      Configures how applications interact with your
-	      PalmOS(TM) based handheld.
-	    </para>
-	  </listitem>
-	</varlistentry>
-	<varlistentry>
-	  <term>Pilot Link</term>
-	  <listitem>
-	    <para>
-	      Configures how your computer talks to your PalmOS(TM)
-	      based handheld.
-	    </para>
-	  </listitem>
-	</varlistentry>
-	<varlistentry>
 	  <term>Startup Applications</term>
 	  <listitem>
 	    <para>
 	      Sets up what programs start when GNOME intially starts.
-	    </para>
-	  </listitem>
-	</varlistentry>
-	<varlistentry>
-	  <term>URL Handlers</term>
-	  <listitem>
-	    <para>
-	      Lets you set what action GNOME takes when you click on links.
-	    </para>
-	  </listitem>
-	</varlistentry>
-	<varlistentry>
-	  <term>Window Manager Selector</term>
-	  <listitem>
-	    <para>
-	      Configures what window manager to use in GNOME.
 	    </para>
 	  </listitem>
 	</varlistentry>
