@@ -1,3 +1,7 @@
+2002-03-21  Kevin Breit  <mrproper@ximian.com>
+
+	* C/control-center.xml: Updated the file with the latest order and amount of things.
+
 2002-03-17  Kevin Breit  <mrproper@ximian.com>
 
 	* xmldocs.make: Added to CVS.  I am a dummy, didn't add this. 
